<resources>
    <string name="app_name">Find Friends</string>
    <string name="app_version">V1.0.0</string>
    <string name="app_author">作者：万福熊</string>

    <string name="title_home">星球</string>
    <string name="title_message">消息</string>
    <string name="title_me">我的</string>

    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_login">登录</string>
    <string name="text_add">添加</string>
    <string name="text_send">发送</string>
    <string name="text_about">关于</string>
    <string name="text_password">密码</string>
    <string name="text_sex">性别</string>
    <string name="text_interest">兴趣</string>
    <string name="text_settings">设置</string>
    <string name="text_refresh">刷新</string>

    <string name="text_phone_number">手机号</string>
    <string name="text_next">下一步</string>
    <string name="text_username">用户名</string>

    <string name="text_id">FF号</string>
    <string name="text_remember_password">记住密码</string>
    <string name="text_auto_login">自动登录</string>
    <string name="text_go_to_register">注册账号</string>
    <string name="text_save_changes">保存更改</string>
    <string name="text_save_profile">保存头像（暂不可用）</string>
    <string name="text_change_profile">修改头像</string>
    <string name="text_delete_profile">删除头像</string>
    <string name="text_change_password">修改密码</string>
    <string name="text_close_account">注销账号</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_ff_id">FF号：</string>
    <string name="text_check_for_update">检查更新</string>
    <string name="text_logout">退出登录</string>
    <string name="text_click_to_update">点此更新</string>
    <string name="text_wipe_password">清空密码</string>
    <string name="text_search_anything">搜索一切</string>
    <string name="text_search_ff">搜索FF号</string>
    <string name="text_start_chat">开始聊天</string>
    <string name="text_loading">请稍等……</string>
    <string name="text_description_load">欢迎使用Find Friends</string>
    <string name="text_my_signature">我的个性签名</string>
    <string name="text_about_body">此软件作者：万福熊</string>
    <string name="text_confirm_close">确定要注销账号吗？</string>
    <string name="text_regist_success">注册成功！请牢记您的FF号！</string>
    <string name="text_please_remember">请牢记您的FF号</string>
    <string name="text_get_start">开始体验</string>
    <string name="text_search">搜索</string>
    <string name="text_null_user">无该用户</string>
    <string name="text_wipe_chat_record">清空聊天记录</string>
    <string name="text_change_language">修改语言</string>
    <string name="text_change_signature">修改签名</string>
    <string name="text_reboot_to_apply">重启生效</string>

    <string name="text_please_input_original_password">请输入原密码</string>
    <string name="text_please_input_new_password">请输入新密码</string>
    <string name="text_please_input_again_password">请再次输入新密码</string>

    <string name="text_chose_language">请选择你的语言</string>

    <string name="error_internet">网络错误</string>
    <string name="error_language">语言错误</string>

    <string name="text_username2">用户名：</string>
    <string name="text_password2">密码：</string>
    <string name="text_interest2">兴趣：</string>
    <string name="text_password_again2">再次输入：</string>
    <string name="text_sex2">性别：</string>
    <string name="text_phone_number2">手机号：</string>

    <string name="text_loading_login">正在登录…</string>
    <string name="text_loading_change_password">正在验证密码…</string>
    <string name="text_loading_closing">正在关闭以应用设置…</string>
    <string name="text_loading_save_info">正在保存信息…</string>
    <string name="text_loading_register">正在注册…</string>
    <string name="text_loading_search">正在搜索…</string>
    <string name="text_loading_update">正在检查更新…</string>
    <string name="text_user_count">当前在线人数</string>
    <string name="text_only_boys">只匹配男</string>
    <string name="text_random">随机匹配</string>
    <string name="text_only_girls">只匹配女</string>
    <string name="text_matching">正在匹配…</string>
    <string name="text_want_to_say">想说……</string>
    <string name="text_add_moment">编辑动态</string>
    <string name="text_send_moment">发布动态</string>

</resources>
