<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wanfuxiong.findfriends.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.wanfuxiong.findfriends.fragment.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.wanfuxiong.findfriends.fragment.MomentFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_moment" />

</navigation>