<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_change_password_header"
        android:layout_width="320dp"
        android:layout_height="66dp"
        android:background="@drawable/background_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Icon -->
        <ImageView
            android:id="@+id/dialog_change_password_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_logo_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Title（default is gone) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:text="@string/text_change_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_change_password_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_header">

        <EditText
            android:id="@+id/dialog_change_password_original"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/drawable_background_change_password"
            android:hint="@string/text_please_input_original_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="12"
            android:paddingStart="14dp"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp" />

        <EditText
            android:id="@+id/dialog_change_password_new"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/drawable_background_change_password"
            android:hint="@string/text_please_input_new_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="12"
            android:paddingStart="14dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_original"
            tools:layout_editor_absoluteX="24dp" />

        <EditText
            android:id="@+id/dialog_change_password_again"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/drawable_background_change_password"
            android:hint="@string/text_please_input_again_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="12"
            android:paddingStart="14dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_new"
            tools:layout_editor_absoluteX="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_change_password_ok"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_ok"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_again"
            app:rippleColor="@color/colorPrimaryExtraDark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_change_password_cancel"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/dialog_change_password_ok"
            app:layout_constraintTop_toTopOf="@+id/dialog_change_password_ok"
            app:rippleColor="@color/colorAccentDark" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>