<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackground"
    tools:context=".activity.AddMomentActivity">

    <Toolbar
        android:id="@+id/toolbar_add_moment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_2"
        android:fitsSystemWindows="true"
        android:navigationIcon="@drawable/ic_goback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_add_moment"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </Toolbar>

    <EditText
        android:id="@+id/edittext_add_moment_content"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/drawable_background_signature"
        android:gravity="top"
        android:hint="@string/text_want_to_say"
        android:max="3"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_moment" />

    <TextView
        android:id="@+id/textview_add_moment_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorMyGray"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_add_moment_content"
        app:layout_constraintEnd_toEndOf="@+id/edittext_add_moment_content"
        tools:text="字数" />

    <ImageView
        android:id="@+id/imageview_add_moment_add_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:background="@drawable/background_border"
        android:padding="30dp"
        android:src="@drawable/ic_add_2"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_add_moment_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_moment_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_send_moment"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/colorPrimaryExtraDark" />

</androidx.constraintlayout.widget.ConstraintLayout>